--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,14 @@ rpy2 = "^3.5.16"
 scipy = "^1.14.1"
 numpy = "^1.26.0"
 
+[tool.r-packages]
+ggplot2 = ">=3.4.0"
+dplyr = ">=1.1.0"
+tidyr = ">=1.3.0"
+purrr = ">=1.0.0"
+readr = ">=2.1.0"
+gtable = ">=0.3.0"
+
 [tool.poetry.group.dev.dependencies]
 ipykernel = "^6.29.5"
 
