--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ pandas = "^2.2.2"
 networkx = "^3.3"
 duckdb = "^1.1.0"
 scipy = "^1.14.1"
-numpy = "^1.26.0"
+numpy = "~1.24.0"
 
 [tool.r-packages]
 ggplot2 = ">=3.4.0"
