--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ networkx = "^3.3"
 duckdb = "^1.1.0"
 scipy = "^1.14.1"
 numpy = "~1.24.0"
+PyYAML = "^6.0"
+jinja2 = "^3.1.2"
 
 [tool.r-packages]
 ggplot2 = ">=3.4.0"
