--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,24 +7,25 @@ readme = "README.md"
 license = "MIT"
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = "^3.11"
 pysam = "^0.22.1"
 requests = "^2.32.3"
 pandas = "^2.2.2"
 networkx = "^3.3"
 duckdb = "^1.1.0"
 scipy = "^1.14.1"
-numpy = "~1.24.0"
+numpy = ">=1.26.0"
 PyYAML = "^6.0"
 jinja2 = "^3.1.2"
 
 [tool.r-packages]
-ggplot2 = ">=3.4.0"
+ggplot2 = ">=3.5.0"
 dplyr = ">=1.1.0"
 tidyr = ">=1.3.0"
 purrr = ">=1.0.0"
 readr = ">=2.1.0"
 gtable = ">=0.3.0"
+ragg = ">=1.3.0"
 
 [tool.poetry.group.dev.dependencies]
 ipykernel = "^6.29.5"
