更新 cf2insights_config.yaml 文件以添加选定突变的示例，更新 template_simple.html 文件以实现高亮样式和相应的样式类，增强了样本列表和可视化部分的高亮显示功能。

--- a/docs/files/cf2insights_config.yaml
+++ b/docs/files/cf2insights_config.yaml
@@ -26,3 +26,7 @@ mutation_parser: default
 # # 使用自定义正则表达式处理复杂格式
 # mutation_parser = "regex:(?P<sample>\w+)_(?P<type>\w+)_(?P<chrom>chr\w+)_(?P<pos>\d+)_(?P<ref>[ACGTN])_(?P<alt>[ACGTN])"
 # result = parse_mutation_file("mutations.tsv", parse_rule=mutation_parser)
+
+# selected_mutations:
+#   - chr1_12345_A_G
+#   - chr2_67890_C_T
