--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,9 @@ numpy = ">=1.26.0"
 PyYAML = "^6.0"
 jinja2 = "^3.1.2"
 
+tqdm = "^4.67.1"
+cairosvg = "^2.7.1"
+pillow = "^11.1.0"
 [tool.r-packages]
 ggplot2 = ">=3.5.0"
 dplyr = ">=1.1.0"
@@ -36,3 +39,4 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
 cf2insights = "in_sight.commands.cf2insights:main"
+cf2insights_bulk = "in_sight.commands.cf2insights_bulk:main"
