--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,9 @@ jinja2 = "^3.1.2"
 tqdm = "^4.67.1"
 cairosvg = "^2.7.1"
 pillow = "^11.1.0"
+psutil = "^7.0.0"
+
+pydantic = "^2.11.3"
 [tool.r-packages]
 ggplot2 = ">=3.5.0"
 dplyr = ">=1.1.0"
@@ -39,4 +42,4 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
 cf2insights = "in_sight.commands.cf2insights:main"
-cf2insights_bulk = "in_sight.commands.cf2insights_bulk:main"
+bayesmonstr2insights = "in_sight.commands.bayesmonstr2insights:main"
